2010-09-26  Gary V. Vaughan  <gary@gnu.org>

	tests: remove unused `aux_dir' variable from `getopt-m4sh.test'.
	* tests/getopt-m4sh.at (aux_dir): Remove unused variable.

	tests: DRYing out `tests/sh.test'.
	* Makefile.am (libtool_m4): Canonical location of libtool.m4 file.
	(lt_aclocal_m4_deps): Use it.
	(check_scripts): New variable for list of scripts to be checked
	by `tests/sh.test'.
	(legacy_tests_edit): New sed script to substitute `libtool_m4'
	and `check_scripts' into `tests/defs'.
	(tests/defs.in): Use it.
	* tests/defs.m4sh (scripts): Calculate absolute paths of each
	entry in `check_scripts' before changing directories.
	(libtool_m4): Save location of `libtool.m4'.
	(macro_dir, aux_dir): Removed. No longer required by any test.
	* tests/sh.test: Remove loop around just `$macro_dir/libtool.m4'
	in favour of a single reference to `$libtool_m4' from above.

2010-09-23  Gary V. Vaughan  <gary@gnu.org>

	maint: pass directory declarations in configure.ac into Makefile.
	* configure.ac (AC_CONFIG_AUX_DIR, LT_CONFIG_LTDL_DIR)
	(AC_CONFIG_MACRO_DIR): Append code to these functions to
	capture and propagate their directory arguments to Makefile.
	* Makefile.am (aux_dir, ltdl_dir, macro_dir): Remove declarations.
	* bootstrap (my_sed_trace): Also capture LT_CONFIG_LTDL_DIR into
	`$ltdl_dir'.
	<Makefile>: Output the extracted values of `aux_dir', `ltdl_dir'
	and `macro_dir' at the top of the quick'n'dirty bootstrap
	Makefile.

2010-09-26  Gary V. Vaughan  <gary@gnu.org>

	maint: factor out ltmain.sh variable deletion.
	* Makefile.am (ltmain_sh_edit): Expand upon bootstrap edit by
	adding the extra line to delete boilerplate variable settings
	from libltdl/config/general.m4sh that don't apply here.
	(libltdl/config/ltmain.sh): Use it.

2010-09-25  Gary V. Vaughan  <gary@gnu.org>

	maint: DRYing out `Makefile.am' file paths.
	* Makefile.am (aux_dir, macro_dir): Include `$(srcdir)' in
	declaration. Adjust all references.